--- a/0094-2023-06-12.md
+++ b/0094-2023-06-12.md
@@ -87,7 +87,11 @@ NOTE: [Pi Pico pinout is here](https://datasheets.raspberrypi.com/pico/Pico-R3-A
 </details>
 
 
-# Setting up pin-mapping FPGA project using "DE0-Nano System Builder"
+# IO-tester FPGA project
+
+The project is here: https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-de0
+
+## Setting up the project using "DE0-Nano System Builder"
 
 From [the manual](https://www.ti.com/lit/ug/tidu737/tidu737.pdf#page=36):
 
@@ -100,4 +104,22 @@ Here is my project config:
 
 ![DE0-Nano System Builder config for Pi Pico pin mapping project](./i/0094-DE0-Nano-System-Builder.png)
 
-Project is now started here: https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-de0
+## Output
+
+The design treats all of the DE0-Nano's gpio0 as inputs, and displays the status of each pin
+in a simple block representing the gpio0 (GPIO-0) header on the DE0-Nano:
+
+![VGA display showing GPIO-0 status](./i/0094-io-vga.jpg)
+
+This diagram shows how the pins and display status (rotated clockwise 90&deg;) match:
+
+![VGA display compared with DE0-Nano board](./i/0094-io-vga2.jpg)
+
+
+
+# Notes
+
+*   Should we modify the `.qsf` to explicitly name all pins to match mapped Pi Pico pins instead of DE0-Nano gpio0 pins?
+*   Quartus can be configured via **Tools &rarr; Options** to do tabbing via spaces instead of tabs:
+
+    ![Quartus text editor tabs settings](./i/0094-quartus-tabs.png)
