Adding hero image to 0094

--- a/0094-2023-06-12.md
+++ b/0094-2023-06-12.md
@@ -2,7 +2,12 @@
 
 # Raspberry Pi Pico to DE0-Nano adapter
 
+![Pi Pico adapter plugged into DE0-Nano with input status on VGA display](./i/0094-pico-de0-board.jpg)
+
 *   I'll use this as a test driver and general test platform for FPGA designs.
+*   Pico's USB interface will be sent commands from host PC to control the state of GPIOs, and optionally later read them,
+    eventually aiming to control them to reflect different data to be sent to the FPGA and possibly other stuff
+    like handling IRQs from the designs running on the FPGA.
 *   Uses regular Pi Pico with RP2040-B1.
 *   Plugs in to DE0-Nano's `GPIO0` 40-pin header.
 *   Maps Pico's GPIO pins to nearest DE0-Nano GPIOs.
