0095: Pi Pico stdio coding on Wokwi

--- a/0093-2023-06-09.md
+++ b/0093-2023-06-09.md
@@ -26,7 +26,7 @@ I'll do this under my Linux VM first.
     echo "export PICO_SDK_PATH=$(realpath pico-sdk)" >> ~/.bashrc
     export PICO_SDK_PATH=$(realpath pico-sdk)
     cd pico-sdk
-    git submodule update --init
+    git submodule update --init  # Needed for TinyUSB.
     ```
     NOTE: Can also override PICO_SDK_PATH by passing `-DPICO_SDK_PATH=...` to `cmake`
 10. ```bash
