--- a/0095-2023-06-14.md
+++ b/0095-2023-06-14.md
@@ -19,7 +19,7 @@ When made as a proper PCB:
 *   Cuttable traces
 *   Break-off strips that can be used to couple a breadboard into the adapter?
 
-# Implementation
+# Firmware Implementation
 
 So far this is very rough and ready, and I've
 [started implementing it in Wokwi](https://wokwi.com/projects/367485443004483585)
@@ -33,11 +33,26 @@ we want to handle out-of-band stuff like reacting to whatever we consider an "in
 4.  Lines starting with `#` are ignored; a way to do debug output.
 5.  Is ENTER key in minicom always just 0x0A (LF)? What about in PuTTY, etc?
 6.  `@` means "read all GPIOs" and returns state of GPIO[29:0] as a binary string (1s and 0s).
-7.  `e` means "echo" and 
-8.  Good responses start with `>`, bad responses start with `!`, and 
+7.  `e` means "echo" and it repeats back its supplied parameter (though it may be truncated
+    if it's too long).
+8.  Good responses start with `>`, bad responses start with `!`, and comments (which could be
+    considered logs or debug info) start with `#`.
 
 # Notes
 
+*   Code to retrieve and print initial state of all GPIO registers, which could be handy also
+    for knowing how to access all these registers anyway:
+    https://forums.raspberrypi.com/viewtopic.php?p=1956337&hilit=gpio+default+pull&sid=0965765be3f049419fbe94df73f738ef#p1956337
+*   [This](https://forum.arduino.cc/t/default-pin-state-at-start/948059/8) asserts
+    that RP2040 GPIOs should start up as inputs, but with pull-downs enabled.
+    Thus, they should be read as 0 if floating, though they should be overridden
+    by pulling them high. Note that I suppose it's possible some would have different
+    states, if they have ARM special purposes enabled, but I'm not sure any are in
+    this state by default.
+*   [General info about GPIO from datasheet](https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf#page=236&zoom=100,153,769)
+*   [Info on initial state of GPIOs from datasheet](https://datasheets.raspberrypi.com/rp2040/rp2040-datasheet.pdf#page=300) ("PADS_BANK0: GPIO0, GPIO1, …, GPIO28, GPIO29 Registers")
+*   There's some good info about GPIO registers [here](https://smist08.wordpress.com/2021/04/24/bit-banging-the-raspberry-pi-picos-gpio-registers/). Note, `hardware_regs`.
+*   Simply read all GPIOs via API: [`gpio_get_all`](https://www.raspberrypi.com/documentation/pico-sdk/hardware.html#gae895be2d3c5af5df460150eafe7858a4)
 *   Experimenting with [Pi Pico in Wokwi](https://wokwi.com/projects/367485443004483585).
 *   Maybe [IRQ stuff in Wokwi](https://wokwi.com/projects/360219175603757057)?
 *   [Wokwi example with Verilog](https://wokwi.com/projects/347074912469385810)
