Updating README a bit for older entries

--- a/0095-2023-06-14.md
+++ b/0095-2023-06-14.md
@@ -1,25 +1,8 @@
 # 14 Jun 2023
 
-# Improvements for Pico-DE0 adapter board
+# Pico-DE0 adapter board
 
-When made as a proper PCB:
-*   Two-way jumpers, one option going direct, other via current-limiting (safety) resistor.
-
-    What's the max sink/source of both DE0 and Pico?
-    *   [Cyclone IV data](https://docs.rs-online.com/cc67/0900766b814d52bb.pdf#page=2&zoom=100,216,352) suggests
-        max pin current of 25mA. Suggest we assume 20mA.
-    *   [Discussion here on RP2040](https://forums.raspberrypi.com/viewtopic.php?t=300735#p1806362) suggests
-        max pin current of 12mA. Suggest we assume 10mA.
-
-    Thus, safety resistor on 3.3V short should be 330&ohm;
-*   Header pins *and* header sockets.
-*   Markers (silkscreen?) for danger pins.
-*   T-shape?
-*   Pico stand-off and swappability. Use 10-way stacking headers for DIP-IC-style pin profiles? DIP socket stripes.
-*   Cuttable traces
-*   Break-off strips that can be used to couple a breadboard into the adapter?
-
-# Firmware Implementation
+## Firmware Implementation
 
 So far this is very rough and ready, and I've
 [started implementing it in Wokwi](https://wokwi.com/projects/367485443004483585)
@@ -38,7 +21,26 @@ we want to handle out-of-band stuff like reacting to whatever we consider an "in
 8.  Good responses start with `>`, bad responses start with `!`, and comments (which could be
     considered logs or debug info) start with `#`.
 
-# Notes
+
+## Improvements for a proper prototype of the adapter board
+
+When made as a proper PCB:
+*   Two-way jumpers, one option going direct, other via current-limiting (safety) resistor.
+    What's the max sink/source of both DE0 and Pico?
+    *   [Cyclone IV data](https://docs.rs-online.com/cc67/0900766b814d52bb.pdf#page=2&zoom=100,216,352) suggests
+        max pin current of 25mA. Suggest we assume 20mA.
+    *   [Discussion here on RP2040](https://forums.raspberrypi.com/viewtopic.php?t=300735#p1806362) suggests
+        max pin current of 12mA. Suggest we assume 10mA.
+    Thus, safety resistor on 3.3V short should be 330&ohm;
+*   Header pins *and* header sockets.
+*   Markers (silkscreen?) for danger pins.
+*   T-shape?
+*   Pico stand-off and swappability. Use 10-way stacking headers for DIP-IC-style pin profiles? DIP socket stripes.
+*   Cuttable traces
+*   Break-off strips that can be used to couple a breadboard into the adapter?
+
+
+## Notes
 
 *   Code to retrieve and print initial state of all GPIO registers, which could be handy also
     for knowing how to access all these registers anyway:
