--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -1,3 +1,10 @@
+---
+previous: [0095](0095-2023-06-14.md)
+alpha: 0095-2023-06-14.md
+beta: ./0095-2023-06-14.md
+gamma: <a href="0095-2023-06-14.md">0095</a>
+delta: https://github.com/algofoogle/journal/blob/master/0095-2023-06-14.md
+---
 # 17 Jun 2023
 
 ## Notes
@@ -117,6 +124,12 @@ Source is here: https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-d
                  ^
     ```
     This seems to work as expected for all of the other GPIOs I bothered trying (inc. GPIO0 and 1).
+
+### Usage notes
+
+*   Backspace doesn't work; it is actually buffered as 0x08 (BS).
+*   If you've made an error in a command and you want to abort it, press CTRL+C (i.e. send 0x02, aka STX).
+
 
 ## Pico GPIO mapping
 
