--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -1,5 +1,5 @@
 ---
-previous: [0095](0095-2023-06-14.md)
+previous: "[0095](0095-2023-06-14.md)"
 alpha: 0095-2023-06-14.md
 beta: ./0095-2023-06-14.md
 gamma: <a href="0095-2023-06-14.md">0095</a>
