0096 has link to previous journal in preamble now

--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -1,9 +1,5 @@
 ---
-previous: "[0095](0095-2023-06-14.md)"
-alpha: 0095-2023-06-14.md
-beta: ./0095-2023-06-14.md
-gamma: <a href="0095-2023-06-14.md">0095</a>
-delta: https://github.com/algofoogle/journal/blob/master/0095-2023-06-14.md
+previous: https://github.com/algofoogle/journal/blob/master/0095-2023-06-14.md
 ---
 # 17 Jun 2023
 
