Update 0096, plus some backlinks, and improve Makefile

--- a/0095-2023-06-14.md
+++ b/0095-2023-06-14.md
@@ -1,5 +1,9 @@
 # 14 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0094**-2023-06-12.md](./0094-2023-06-12.md) | [**0096**-2023-06-17.md](./0096-2023-06-17.md) |
+
 # Pico-DE0 adapter board
 
 ## Firmware Implementation
