--- a/0094-2023-06-12.md
+++ b/0094-2023-06-12.md
@@ -1,5 +1,9 @@
 # 12 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0093**-2023-06-09.md](./0093-2023-06-09.md) | [**0095**-2023-06-14.md](./0095-2023-06-14.md) |
+
 # Raspberry Pi Pico to DE0-Nano adapter
 
 ![Pi Pico adapter plugged into DE0-Nano with input status on VGA display](./i/0094-pico-de0-board.jpg)
