--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -1,7 +1,8 @@
----
-previous: https://github.com/algofoogle/journal/blob/master/0095-2023-06-14.md
----
 # 17 Jun 2023
+
+| Previous journal: | Next journal: |
+|-|-|
+| [**0095**-2023-06-14.md](./0095-2023-06-14.md) | *Next journal TBA* |
 
 ## Notes
 
@@ -29,6 +30,12 @@ previous: https://github.com/algofoogle/journal/blob/master/0095-2023-06-14.md
 *   ENTER key in Wokwi's Serial Monitor sends 0x0A (LF) but PuTTY (and minicom on Ubuntu 20.04) send 0x0D (CR) only instead.
 *   [Comment](https://forums.raspberrypi.com/viewtopic.php?t=335862) on newline and waiting for USB handshake (inc. timeout),
     though not entirely helpful.
+
+With the Pico-DE0 plugged in to the DE0-Nano with my test design, it reveals the below GPIOs are sensed to be low
+(in blue). These make sense to me because the ones that are not connected seem to be floating high, while the rest
+are connected to Pico inputs *that by default have internal pull-downs on them* so a low signal seems plausible:
+
+![](./i/0096-Pico-DE0-sense.png)
 
 
 ## Building and flashing pico_de0
