More Makefile updates

--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -35,7 +35,7 @@ With the Pico-DE0 plugged in to the DE0-Nano with my test design, it reveals the
 (in blue). These make sense to me because the ones that are not connected seem to be floating high, while the rest
 are connected to Pico inputs *that by default have internal pull-downs on them* so a low signal seems plausible:
 
-![](./i/0096-Pico-DE0-sense.png)
+![DE0-Nano sensing status for GPIOs on Pico-DE0](./i/0096-Pico-DE0-sense.png)
 
 
 ## Building and flashing pico_de0
