0096 updated for extra pico_de0 firmware options

--- a/0096-2023-06-17.md
+++ b/0096-2023-06-17.md
@@ -101,7 +101,7 @@ Source is here: https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-d
     ```
     e hello
     ```
-    **NOTE:** There will be no echo until ENTER is pressed, but then it should respond with:
+    **NOTE:** Echo mode is on by default. Response should then be:
     ```
     > hello
     ```
@@ -127,11 +127,14 @@ Source is here: https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-d
                  ^
     ```
     This seems to work as expected for all of the other GPIOs I bothered trying (inc. GPIO0 and 1).
-
-### Usage notes
-
-*   Backspace doesn't work; it is actually buffered as 0x08 (BS).
-*   If you've made an error in a command and you want to abort it, press CTRL+C (i.e. send 0x02, aka STX).
+6.  NOTE: Backspace doesn't work; it is actually buffered as 0x08 (BS). **If you've made an error in a command and you want to abort it, press CTRL+C** (i.e. send 0x03, aka ETX).
+7.  There are "modes" you can turn on and off with the `+` and `-` commands respectively. Example: Turn off echo mode with `-echo`. Currently supported modes are:
+    *   `echo` (ON by default): Echo back every character sent by the host, and insert a LF for each "ENTER".
+    *   `debug` (ON by default): Prints extra `# ...` comment messages, in some cases.
+    *   `hex` (OFF by default): Prints/expects values in hex, rather than bit fields.
+8.  NOTE also:
+    *   For now, alphabetic commands (e.g. `e`) are case insensitive.
+    *   For commands that take an argument, any leading whitespace (between the command character and its first argument) is ignored.
 
 
 ## Pico GPIO mapping
