--- a/0098-2023-06-19.md
+++ b/0098-2023-06-19.md
@@ -33,3 +33,22 @@
 3.  As soon as a `]` command starts, store the current timestamp.
 4.  Upon executing the `]` command, print the time since READY and the time since the `[` was first started.
 5.  NOTE: The `]` can be issued again later, to keep printing the delta since the last mark was started with `[`.
+
+## Notes
+
+*   [RP2040 software reset methods](https://forums.raspberrypi.com/viewtopic.php?t=318747)
+
+## Sending data to Pico-DE0 using Python
+
+I'm going to try using Python to send data from Windows to the Pico-DE0...
+
+*   In Python we could do the basics of what raybox-app does with vectors from mouse/KB input.
+*   [pygame](https://www.pygame.org/wiki/GettingStarted) is probably good for basic mouse/keyboard capture.
+*   pygame could also display a basic map on the host.
+*   PySerial can do COM port access on Windows.
+
+### Installing Python for Windows
+
+1.  Download Python 3.11.4 installer for Windows from [here](https://www.python.org/downloads/windows/).
+2.  Run it, tick option to add to PATH, and click "Install Now".
+3.  Install Microsoft's Python VSCode extension.
