--- a/0098-2023-06-19.md
+++ b/0098-2023-06-19.md
@@ -52,3 +52,16 @@ I'm going to try using Python to send data from Windows to the Pico-DE0...
 1.  Download Python 3.11.4 installer for Windows from [here](https://www.python.org/downloads/windows/).
 2.  Run it, tick option to add to PATH, and click "Install Now".
 3.  Install Microsoft's Python VSCode extension.
+4.  Check out [this guide](https://code.visualstudio.com/docs/python/python-tutorial#_create-a-virtual-environment)
+
+### Installing requirements
+
+On Windows...
+
+1.  `cd pi_pico\pico-de0\client`
+2.  `py -m pip install -r requirements.txt`
+
+### Basic python serial client
+
+[I've started it](https://github.com/algofoogle/sandpit/tree/master/pi_pico/pico-de0/client).
+This proves comms works, though there's a lot more to do yet.
