--- a/0101-2023-06-22.md
+++ b/0101-2023-06-22.md
@@ -4,11 +4,22 @@
 |-|-|
 | [**0100**-2023-06-21.md](./0100-2023-06-21.md) | *Next journal TBA* |
 
+# Notes
+
+For TT04's GitHub Actions, I took the general code of [my PR for GDS-to-PNG conversion](https://github.com/TinyTapeout/tt03p5-submission-template/pull/4) and [adapted it](https://github.com/TinyTapeout/tt-gds-action/pull/1).
+
+This includes using `pngquant --quality 10-30 ...` which reduces the total colours in the image, especially
+for larger images, but should hopefully achieve the target of 8x2-sized tiles rendering to PNGs at full
+resolution but under 5MB.
+
+Later I want to look at whether this method can be moved from discrete GHA steps to `tt_tool.py --create-png`.
+
+
 # Pygame-based `raybox-bridge.py`
 
 The source is here: [`raybox-bridge.py`](https://github.com/algofoogle/sandpit/blob/master/pi_pico/pico-de0/client/raybox-bridge.py).
 
 For now it just aims to prove that, on a Windows host, we can use Python to get raw keyboard and mouse
-data so that it could be sent on to my Pico-DE0, and hence could control my Raybox design.
+data so that it *could* be sent on to my Pico-DE0, and hence could control my Raybox design.
 
 My first actual DE0-Nano Verilog experiment using this should perhaps be to implement a mouse cursor in a simple VGA display.
