--- a/0101-2023-06-22.md
+++ b/0101-2023-06-22.md
@@ -23,3 +23,5 @@ For now it just aims to prove that, on a Windows host, we can use Python to get 
 data so that it *could* be sent on to my Pico-DE0, and hence could control my Raybox design.
 
 My first actual DE0-Nano Verilog experiment using this should perhaps be to implement a mouse cursor in a simple VGA display.
+
+Might need to slow down the rate of events, and perhaps just get a cumulative delta (especially for mouse movements) every 10ms or so?
