0103: Quick raybox-bridge notes

--- a/0102-2023-06-25.md
+++ b/0102-2023-06-25.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0101**-2023-06-22.md](./0101-2023-06-22.md) | *Next journal TBA* |
+| [**0101**-2023-06-22.md](./0101-2023-06-22.md) | [**0103**-2023-06-26.md](./0103-2023-06-26.md) |
 
 # Raybox-bridge: What language?
 
@@ -61,7 +61,7 @@
     so we only need to send one command with all the necessary register parameters and let the
     Pico-DE0 send it to the FPGA design as fast as it can.
 *   PIO is another option; offload the job.
-*   [Cython](https://www.infoworld.com/article/3250299/what-is-cython-python-at-the-speed-of-c.html
+*   [Cython](https://www.infoworld.com/article/3250299/what-is-cython-python-at-the-speed-of-c.html)
     and [Codon](https://thenewstack.io/mit-created-compiler-speeds-up-python-code/) could be
     interesting to look into for compiling Python code.
 
