--- a/0105-2023-06-29.md
+++ b/0105-2023-06-29.md
@@ -14,15 +14,39 @@
     pick up on, so I will keep the register method so it helps spot errors and debug them more easily.
 *   I increased the raybox-bridge transmit rate from once every 5ms to once every 2.5ms, and it keeps
     up with 99.8% of transmits.
+*   I added to the PicoDeo firmware:
+    *   `/` command starts an extended command (with a longer name as first argument).
+    *   First is "circle" (i.e. `/circle`). This is dedicated to sending a constantly-updating
+        cursor position that follows a circle.
+    *   When in this mode, normal PicoDeo responses stop, and it goes thru a loop.
+    *   It still watches for other inputs, though:
+        *   <kbd>CTRL+C</kbd> (ASCII 0x03): Stop the loop and return to normal command processing.
+        *   `+`: Double the current delay.
+        *   `-`: Halve the current delay.
+    *   Delay starts off at 16384&micro;s (i.e. about 61Hz, nearly matched to screen refresh).
+    *   Reduced to about 16&micro;s (if it even is able to meet that timing spec) it becomes
+        obvious that the real-time cursor reads of the vga_cursor design are seeing a
+        smeared/bent cursor, and some glitching becomes evident.
 
 # Next steps
 
-*   Try adding a PicoDeo firmware routine that runs in a loop (until interrupted) to move the cursor
-    in a circle by setting GPIOs slower than a CPU could, but faster than USB commands can.
-    *   This will probably be too fast to see the circle motion but should still be visible as the cursor
-        occupying the locus of the circle, and should be much more likely to expose glitching.
-    *   Our goals then will be to:
-        1.  See what it looks like when we sample the GPIOs only during VBLANK.
-        2.  See if we can trigger any uncertainty/metastability during this sampling.
-        3.  Design this to work with actual externally-mastered inputs into dedicated *8-bit*
-            registers, or even serially clocked in, such that it can basically never fail.
+1.  See what it looks like when we sample the GPIOs only during VBLANK.
+2.  See if we can trigger any uncertainty/metastability during this sampling.
+3.  Design this to work with actual externally-mastered inputs into dedicated *8-bit*
+    registers, or even serially clocked in, such that it can basically never fail.
+
+# Notes
+
+My pixel clock is meant to be 25MHz. Divided by 800 (line width),
+then divided by 525 (frame height), this is 59.52HZ, which the monitor agrees with:
+
+![Monitor sync rate showing 59.52Hz](./i/0105-monitor-sync.png)
+
+This equates to a frame duration of exactly 16.8ms.
+
+Our default "circle loop" delay is 16.384ms, so if we were to get an extra delay in there
+of 0.416ms, then it would be 16.8ms. That should be pretty close to perfectly sync'd,
+should we want to try how well (or badly) that cooperates with the design.
+
+Note that there is some built-in delay, I'm sure, besides the 16.384ms target. Not sure how
+much but maybe we can time this using `time_us_32()` and a known number of iterations.
