--- a/0106-2023-06-30.md
+++ b/0106-2023-06-30.md
@@ -8,12 +8,23 @@
 
 *   With the circle-cursor generator running on PicoDeo, a telltale sign of the behaviour
     we want to get rid of is that sometimes the cursor appears as a long arc, or as a
-    parallelogram. This means that the cursor reference point is changing through each
+    flattened parallelogram.
+
+    ![Glitching circle](./i/0106-circle.jpg)
+
+    This means that the cursor reference point is changing through each
     scanline, without the design having a registered reference.
     Otherwise, the cursor would appear as a square.
+
 *   I've noticed ways to more-easily see glitching on the vga_cursor raw GPIO inputs:
     *   Half-unplug the PicoDeo while circle-cursor is running.
+
+        ![Glitching caused by levering out the PicoDeo part-way](./i/0106-lever.jpg)
+
     *   Just pull out the PicoDeo and touch the header pins with my finger.
+
+        ![Glitching caused by finger touch](./i/0106-finger.jpg)
+
 *   Doing it this way I think creates more uncertainty on some inputs, and picks up other
     interference, which means a much less stable input signal (which is what we want).
 *   Hence, our goal is to make THAT "work", i.e. always present nothing but a square cursor,
