0107 updates for USE_SPI update and next steps

--- a/0107-2023-07-02.md
+++ b/0107-2023-07-02.md
@@ -45,6 +45,50 @@
         about 1MHz, having to bit-bang it. It might only be able to send on the order of (at worst)
         100,000 bits per second, or as low as 1,100 bits per VGA frame. Still plenty though :)
 
+# Recent updates
+
+*   I've written code for the [`USE_SPI`] mode.
+*   It uses pairs of DFFs to synchronise the SPI inputs to the design's clock domain.
+*   The SPI bus allows a host controller to assert `/SS` (active-low) and then clock in 19 bits
+    (first cursor_x's 10 bits starting with MSB, then cursor_y's 9 bits starting with MSB).
+*   Following completion of the last bit, the next cycle of the design's main clock will copy
+    the captured SPI bit stream into a `ready_buffer`.
+*   The instant the current VGA frame ends, the contents of the `ready_buffer` are copied (once)
+    into `cursor_x` and `cursor_y`.
+*   This should hopefully allow the SPI master to stream in new cursor data whenever it wants,
+    and know that:
+    (1) it will not be invalidated; (2) it will not be interrupted or otherwise need to wait;
+    (3) it will only be used at the right time before a new VGA frame is rendered.
+
+# Next steps
+
+*   BUG: `spi_done` never gets reset.
+*   Might need to test this design with Verilator or a Verilog TB that gives us a VCD.
+*   Implement PicoDeo firmware support for this SPI mode. Maybe make it callable via a
+    slash-command, since it is specific to this test and probably can't be bit-banged by 
+    the raybox-bridge Python code fast enough.
+*   Make sure the `spi_buffer` will ONLY be copied into `ready_buffer` (or subsequently into
+    the cursor registers) while the data is valid, i.e. in response to a new SPI bit stream.
+
+# Notes
+
+*   I'm using an [`spi_done` signal][spi_done] to indicate completion of the last SPI bit,
+    before then [using this signal to copy the SPI bit stream buffer into `ready_buffer`][SPICopy]
+    (so that it can be safely used at the end of the VGA frame), but is this necessary?
+    We are oversampling the SPI signals, so maybe it doesn't matter...? I still think it does tho.
+    Also, `spi_done` will be repeatedly re-asserted by the current `if` conditions...? Or maybe
+    not, because `sclk_rise` only occurs on exactly one system clock cycle.
+*   Need a full system RESET signal, too, so that SPI buffers don't start random?
+*   Read more about [SPI on fpga4fun](https://www.fpga4fun.com/SPI1.html).
+*   `/circle c` and `/circle 23` give a pretty stable image with a few glitches.
+*   Besides circle, try some more complex Lissajous curves (or even increasing frequency on
+    X or Y) and see if it exposes more glitching.
+*   Make `/circle` count updates and elapsed time, to prove an average update frequency.
+*   When SPI is implemented, try pushing PicoDeo update rate to the point that the SPI fails.
+
 
 [SPI]: https://en.wikipedia.org/wiki/Serial_Peripheral_Interface
 [SSFalling]: https://en.wikipedia.org/wiki/Serial_Peripheral_Interface#Operation
+[`USE_SPI`]: https://github.com/algofoogle/sandpit/blob/41d717a470a7a8bf9f74aa0b864c9c0510ae2f06/pi_pico/pico-de0/vga_cursor/vga_cursor.v#L95
+[spi_done]: https://github.com/algofoogle/sandpit/blob/41d717a470a7a8bf9f74aa0b864c9c0510ae2f06/pi_pico/pico-de0/vga_cursor/vga_cursor.v#L154
+[SPICopy]: https://github.com/algofoogle/sandpit/blob/41d717a470a7a8bf9f74aa0b864c9c0510ae2f06/pi_pico/pico-de0/vga_cursor/vga_cursor.v#L149-L151
