0110: Raybox: DE0-Nano builds again. Windows Verilator notes

--- a/0077-2023-05-09.md
+++ b/0077-2023-05-09.md
@@ -5,8 +5,12 @@
 ## Accomplishments
 
 *   Got the sim building on Windows. Involves a little mucking around.
+    *   The actual Windows setup of `make` and the GCC build environment (using MinGW)
+is documented in the [Raybox README][].
 *   Got mouse rotation working (in Windows only; Linux might be having a pointer problem due to VirtualBox virtual pointer), and in combination with WASD it feels a bit more like a real FPS now!
 *   Started working on code that will lead to wall textures.
+
+[Raybox README]: https://github.com/algofoogle/raybox#setting-up-under-windows
 
 ## Stuff I would expect to sort out before calling this Version 1
 
