Update 0110 with PicoDeo /rbvectors info

--- a/0110-2023-07-07.md
+++ b/0110-2023-07-07.md
@@ -15,11 +15,32 @@ and proven that the updated version works on the DE0-Nano:
 ![Raybox 64x64 map on DE0-Nano](./i/0110-raybox64.jpg)
 
 
+# PicoDeo `/rbvectors` command for sending Raybox vectors via SPI
+
+The PicoDeo firmware now implements the `/rbvectors` extended command with this format:
+
+    /rbvectors player_x player_y facing_x facing_y vplane_x vplane_y
+
+...where each of the arguments is a number, representing a 24-bit fixed-point value.
+
+These are the 6 essential values (3 X/Y vectors) that tell the Raybox engine what point-of-view it's rendering.
+
+This command responds with how long it took to transmit (its 144-bit payload) via SPI. Typically this seems
+to be ~300&micro;s, but this is only counting the time spent in `spi_send_raybox_vectors`.
+
+**NOTE:** The combined total time with the overhead of actually sending the `/rbvectors` command over USB,
+interpreting, calling `spi_send_raybox_vectors`, and sending the response back over USB seems to total nearly
+**2 milliseconds**, so beware! Maybe to speed this up in future we could switch into a mode that just streams
+the data directly, breaking out of that mode when vplane_x/y are both 0.
+
+
 # Building Raybox SIM in Windows
 
-Hmm, I got this working on Windows 11, but I've struggled trying to repeat on Windows 10...
+Hmm, I got this working on Windows 11, but I've struggled trying to repeat on Windows 10.
+My existing (long-standing) dev env on this machine might mean I've had all sorts of things
+in the past that have mucked this up a bit.
 
-[0077](./0077-2023-05-09.md) notes *when* I got Raybox to build under Windows, but not *how*.
+[0077](./0077-2023-05-09.md) notes *when* I got Raybox to build under Windows 11, but not *how*.
 
 The actual Windows setup of `make` and the GCC build environment (using MinGW)
 is documented in the [Raybox README][].
