Update 0110 with next steps

--- a/0110-2023-07-07.md
+++ b/0110-2023-07-07.md
@@ -14,6 +14,23 @@ and proven that the updated version works on the DE0-Nano:
 
 ![Raybox 64x64 map on DE0-Nano](./i/0110-raybox64.jpg)
 
+**NOTE:** Prior to implementing support for Raybox to receive the vectors SPI payload
+(per `/rbvectors` notes below), these are the current synthesis stats in Quartus, with
+`ENABLE_DEBUG` turned on:
+
+| Stat                                     | Info                     |
+|------------------------------------------|--------------------------|
+| Family                                   | Cyclone IV E             |
+| Device                                   | EP4CE22F17C6             |
+| Timing Models                            | Final                    |
+| Total logic elements                     | 10,129 / 22,320 ( 45 % ) |
+| Total registers                          | 229                      |
+| Total pins                               | 51 / 154 ( 33 % )        |
+| Total virtual pins                       | 0                        |
+| Total memory bits                        | 16,000 / 608,256 ( 3 % ) |
+| Embedded Multiplier 9-bit elements       | 100 / 132 ( 76 % )       |
+| Total PLLs                               | 0 / 4 ( 0 % )            |
+
 
 # PicoDeo `/rbvectors` command for sending Raybox vectors via SPI
 
@@ -32,6 +49,16 @@ to be ~300&micro;s, but this is only counting the time spent in `spi_send_raybox
 interpreting, calling `spi_send_raybox_vectors`, and sending the response back over USB seems to total nearly
 **2 milliseconds**, so beware! Maybe to speed this up in future we could switch into a mode that just streams
 the data directly, breaking out of that mode when vplane_x/y are both 0.
+
+
+# Next steps
+
+*   Add GPIO-0 to the Raybox Quartus project so we can get them ready for SPI inputs.
+*   Implement SPI receiver logic in Raybox, along the lines of what we did in vga_cursor.
+*   Implement game state tracking and possible 2D rendering (inc. birds-eye-view map) in raybox-bridge.
+*   Make raybox-bridge actually use `/rbvectors`.
+*   Try building a VGA R2R DAC for my DE0-Nano.
+*   Try implementing "reset", "map", "debug overlay" (and anything else?) via raybox-bridge too.
 
 
 # Building Raybox SIM in Windows
