Update 0112 re Raybox now actually receiving SPI vectors data

--- a/0112-2023-07-11.md
+++ b/0112-2023-07-11.md
@@ -1,4 +1,4 @@
-# 11 Jul 2023
+# 11 Jul 2023new_playerX
 
 | Previous journal: | Next journal: |
 |-|-|
@@ -6,22 +6,81 @@
 
 # Accomplishments
 
+Raybox vector updates now work via SPI, and the design is controllable from a PC via PicoDeo!
+
+This screenshot shows a Raybox view that can only be achieved by sending vectors to the design, via SPI:
+
+![Raybox accepting vector updates via SPI](./i/0112-raybox-spi.jpg)
+
+As far as I can tell, this is updating smoothly at the full ~60Hz.
+
 ## raybox-bridge
 
-*   Mouse rotation now implemented. It seems to work in combo with WASD keys, now.
+*   Mouse rotation now implemented. It works in combo with WASD keys, now.
     I disabled a bunch of other stuff left over from vga_cursor.
 *   `Player` class can do conversion of vectors in fixed point, and these values now
     send in the "tick" handler via PicoDeo's `/rbvectors` command.
     SPI receiver not yet implemented in Raybox design.
 
+## Raybox design
+
+The key thing obviously is that I implement the Raybox SPI receiver for `/rbvectors` data.
+
+I put in some more `` `define ``s to mask out stuff we don't need if we're going for SPI,
+and the synth stats with `ENABLE_DEBUG` still defined are as follows (as compared with
+in [0110](./0110-2023-07-07.md)):
+
+| Stat                                | Info                     |
+|-------------------------------------|--------------------------|
+| Family                              | Cyclone IV E             |
+| Device                              | EP4CE22F17C6             |
+| Timing Models                       | Final                    |
+| Total logic elements                | 9,110 / 22,320 ( 41 % )  |
+| Total registers                     | 164                      |
+| Total pins                          | 51 / 154 ( 33 % )        |
+| Total virtual pins                  | 0                        |
+| Total memory bits                   | 16,000 / 608,256 ( 3 % ) |
+| Embedded Multiplier 9-bit elements  | 72 / 132 ( 55 % )        |
+| Total PLLs                          | 0 / 4 ( 0 % )            |
+
+NOTE: I think a lot of the reductions here (namely in registers and multipliers) is because our vectors can no longer
+be modified, so a lot of this has been optimised out. I'm sure it'll go back up when bringing in the SPI implementation.
+
+With the SPI logic now in place and wired up to the DE0-Nano GPIOs:
+
+| Stat                                | Info                     |
+|-------------------------------------|--------------------------|
+| Family                              | Cyclone IV E             |
+| Device                              | EP4CE22F17C6             |
+| Timing Models                       | Final                    |
+| Total logic elements                | 13,597 / 22,320 ( 61 % ) |
+| Total registers                     | 672                      |
+| Total pins                          | 87 / 154 ( 56 % )        |
+| Total virtual pins                  | 0                        |
+| Total memory bits                   | 16,000 / 608,256 ( 3 % ) |
+| Embedded Multiplier 9-bit elements  | 132 / 132 ( 100 % )      |
+| Total PLLs                          | 0 / 4 ( 0 % )            |
+
+Whoa! Now it's using all multipliers (I guess because we actually have real logic wired up to all of them), and
+HEAPS more registers. I would expect +288, but I guess there's more going on.
+
+
 # Next steps
 
-*   Implement Raybox SPI receiver for `/rbvectors` data.
+*   Check the SPI logic to make sure it's not possible for a write to be lost (or otherwise cause a conflict)
+    if it occurs exactly at the key moments (like buffer &rarr; ready transfer).
+*   DON'T load from ready_buffer if an SPI load hasn't happened yet.
 *   Consider keys that offer a way to "muck" with vectors, e.g. non-orthographic,
     pushing them outside their normal range. Examples:
     *   "Wobble" vplane (skew it) left and right rapidly or otherwise stretch/squash it
         to create hallucination/watery effect.
     *   Expand vplane substantially to create pull-out stretch effect.
+*   Try compacting vectors; they don't need to be so big (see below).
+*   Add SPI support for map button and reset.
+*   Try implementing map reading and collisions in raybox-bridge?
+*   See if we can correct textures so they don't mirror on certain wall sides.
+*   Try SPI in RP2040 hardware instead of bit-banging.
+
 
 # Notes
 
