0114: Notes on next steps for Raybox

--- a/0112-2023-07-11.md
+++ b/0112-2023-07-11.md
@@ -24,7 +24,7 @@ As far as I can tell, this is updating smoothly at the full ~60Hz.
 
 ## Raybox design
 
-The key thing obviously is that I implement the Raybox SPI receiver for `/rbvectors` data.
+The key thing obviously is that I implemented the Raybox SPI receiver for `/rbvectors` data.
 
 I put in some more `` `define ``s to mask out stuff we don't need if we're going for SPI,
 and the synth stats with `ENABLE_DEBUG` still defined are as follows (as compared with
