0119: Let's get started with TT04

--- a/0091-2023-06-07.md
+++ b/0091-2023-06-07.md
@@ -1,5 +1,10 @@
 # 7 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0090**-2023-06-06.md](./0090-2023-06-06.md) | [**0092**-2023-06-08.md](./0092-2023-06-08.md) |
+
+
 Stuff I've journaled previously, or recently started looking into, re STM32:
 *   My sandpit experiments with STM32: https://github.com/algofoogle/sandpit/tree/master/stm32
 *   Quick links to some STM32 notes that might be useful, esp. re bootloader: https://github.com/algofoogle/sandpit/blob/master/neswifi/doco/JOURNAL.md#other-findings
