--- a/0092-2023-06-08.md
+++ b/0092-2023-06-08.md
@@ -1,5 +1,12 @@
 # 8 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0091**-2023-06-07.md](./0091-2023-06-07.md) | [**0093**-2023-06-09.md](./0093-2023-06-09.md) |
+
+
+# MCU/FPGA bridge ideas
+
 *   STM32 emulators:
     *   https://github.com/nviennot/stm32-emulator
     *   https://www.youtube.com/watch?v=h_Ptwczj-oY
