--- a/0093-2023-06-09.md
+++ b/0093-2023-06-09.md
@@ -1,5 +1,9 @@
 # 9 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0092**-2023-06-08.md](./0092-2023-06-08.md) | [**0094**-2023-06-12.md](./0094-2023-06-12.md) |
+
 ## Following the Pi Pico C/C++ SDK guide
 
 Ref: https://www.raspberrypi.com/documentation/microcontrollers/c_sdk.html
