0120: tt04-solo-squash next steps

--- a/0089-2023-06-05.md
+++ b/0089-2023-06-05.md
@@ -1,5 +1,10 @@
 # 5 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0088**-2023-05-28.md](./0088-2023-05-28.md) | [**0090**-2023-06-06.md](./0090-2023-06-06.md) |
+
+
 Busy few days recently!
 
 On June 1st I started preparing a submission for Tiny Tapeout "tt03p5" (an experimental round).
