--- a/0090-2023-06-06.md
+++ b/0090-2023-06-06.md
@@ -1,5 +1,10 @@
 # 6 Jun 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0089**-2023-06-05.md](./0089-2023-06-05.md) | [**0091**-2023-06-07.md](./0091-2023-06-07.md) |
+
+
 Want to try driving/reading DE0-Nano pins with async clocking, so as to behave like an actual CPU bus:
 
 *   Consider making the DUT (target design) interface just 8 IOs, so it is both simpler to implement (I think?)
